2004-11-23  Stefan Hundhammer  <sh@suse.de>

	* Migration to KIO slave trash:/ for "move to trash" cleanup
	  (querying KDE version >= 3.4 at runtime)

	* Fixed lots of KDE libs "deprecated" warnings

	* Reimported admin/ subdir from a recent KDE version (3.3.0)

	* Bumped version to 2.4.2
	

2004-03-30  Stefan Hundhammer  <sh@suse.de>

	* Fixed KPacMan rendering in toolbar (thanks to Coolo)
	

2004-03-01  Stefan Hundhammer  <sh@suse.de>

	* Updated German translation


2003-11-13  Stefan Hundhammer  <sh@suse.de>

	* Added Italian translation by Giuliano Colla <colla@copeca.it>


2003-10-29  Stefan Hundhammer  <sh@suse.de>

	* Applied i18n patch by Toyohiro Asukai <toyohiro@ksmplus.com>

	* Updated Japanese translation by Toyohiro Asukai <toyohiro@ksmplus.com>


2003-10-20  Stefan Hundhammer  <sh@suse.de>

	* Fixed some SuSE-internal Autobuild complaints

	* Fixed treemap context menu popup location

	* Bumped version to 2.4.1


2003-09-15  Stefan Hundhammer  <sh@suse.de>

	* Added Hungarian translation contributed by
	  Marcel Hilzinger <hili@suselinux.hu>

2003-08-26  Stefan Hundhammer  <sh@suse.de>

	* Bumped version to 2.4.0

	* Fixed crash on program end while reading directories

	* Fixed crash on open dir while still reading another directory

	* Added "stop reading" action

	* Added German translation contributed by
	  Christoph Eckert <fmchristoph.eckert@t-online.de>


2003-05-25  Stefan Hundhammer  <sh@suse.de>

	* Bumped version to 2.3.7

	* Performance boost: Directory reading is now 16-20 times faster
	  because much fewer KDirTreeViewItems are cloned during reading

	* Using QListViewItem::compare() instead of QListViewItem::key()
	  for better performance: less string operations / numeric formatting


2003-04-28  Stefan Hundhammer  <sh@suse.de>

	* Added French translation by Michel Grentzinger <mic.grentz@online.fr>

	* Don't add up special files (char/block devices, sockets, FIFOs)


2003-02-03  Stefan Hundhammer  <sh@suse.de>
